--- a/parsers/user_def_property.rdl
+++ b/parsers/user_def_property.rdl
@@ -105,3 +105,8 @@ property intr_type {
     component = field;
     type = ref;
 };
+
+property is_ras_arch {
+    component = addrmap;
+    type = boolean;
+};
